タイトル変更

--- a/articles/a627fee37b1ac9.md
+++ b/articles/a627fee37b1ac9.md
@@ -1,5 +1,5 @@
 ---
-title: "アクセスログを可視化する"
+title: "アクセスログを可視化してみよう！ユーザー行動のデータビジュアライゼーション"
 emoji: "👏"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["Python", "DataVisualization"]
