--- a/articles/a627fee37b1ac9.md
+++ b/articles/a627fee37b1ac9.md
@@ -286,6 +286,10 @@ plt.show()
 
 この図示の欠点としては、時間解像度を細かくしたり行動のカテゴリを増やすほど色を見分けづらくなります。自分はこれを解消するために図の拡大・縮小ができるPlotlyを利用しています。あとは、大画面に映せると見やすいです。
 
+*実際に分析に使っている図*
+
+![](https://storage.googleapis.com/zenn-user-upload/6143e7219baa-20241204.png)
+
 サービスのユーザー体験を向上させるために様々な調査をしていると思います。1人1人にユーザビリティテストをお願いするのもなかなか厳しいので、今回のような手法で分析してみるというのもいかがでしょうか。
 
 今回のように時系列の行動データを用いることで行動の予測もできるようになるはずなので、機会があったら挑戦してみようと思います。
