--- a/articles/8407357691188a.md
+++ b/articles/8407357691188a.md
@@ -56,11 +56,7 @@ Android Studioがあれば大丈夫です。
 
 p5.jsで作ってみるとこんな感じです。
 
-<iframe height="482" style="width: 100%;" scrolling="no" title="State0-2" src="https://codepen.io/norihirosunada/embed/JjBGVBz?default-tab=js%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-  See the Pen <a href="https://codepen.io/norihirosunada/pen/JjBGVBz">
-  State0-2</a> by Norihiro Sunada (<a href="https://codepen.io/norihirosunada">@norihirosunada</a>)
-  on <a href="https://codepen.io">CodePen</a>.
-</iframe>
+@[codepen](https://codepen.io/norihirosunada/pen/JjBGVBz?editors=0010)
 
 ### Jetpack Composeで作ってみる
 
