--- a/articles/8407357691188a.md
+++ b/articles/8407357691188a.md
@@ -1,5 +1,5 @@
 ---
-title: "クリエイティブコーダーに向けたAndroid開発への手引き"
+title: "Androidでもクリエイティブコーディングしてみよう！"
 emoji: "🎉"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["Creative Coding","p5js","Android","Jetpack Compose"]
